모아보기에 my price 및 og태그 추가

--- a/week04/src/main/resources/static/style.css
+++ b/week04/src/main/resources/static/style.css
@@ -199,6 +199,14 @@ button {
     font-weight: bold;
 }
 
+.site-info {
+    background-color: #15aabf;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    font-weight: normal;
+}
+
 #product-container {
     grid-template-columns: 100px 50px 100px;
     grid-template-rows: 80px auto 80px;
