--- a/week04/src/main/resources/static/style.css
+++ b/week04/src/main/resources/static/style.css
@@ -125,7 +125,7 @@ button {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     position: relative;
     width: 370px;
-    height: 190px;
+    height: 220px;
     border-radius: 11px;
     background-color: #ffffff;
 }
@@ -142,7 +142,7 @@ button {
 }
 
 .popup input {
-    width: 330px;
+    width: 300px;
     height: 39px;
     border-radius: 2px;
     border: solid 1.1px #dee2e6;
@@ -267,14 +267,44 @@ button {
 }
 
 .product-card .card-body .isgood {
-    margin-top: 10px;
+    margin: 10px 0;
     padding: 10px 20px;
     color: white;
     border-radius: 2.6px;
     background-color: #ff8787;
-    width: 42px;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
 }
 
 .none {
     display: none;
+}
+
+.delete-btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: 10px 0;
+    color: white;
+    background-color: #dc3545;
+    border-radius: none;
+}
+
+.delete-btn:hover {
+    color: #fff;
+    background-color: #c82333;
+    border-color: #bd2130;
 }
